--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,10 @@
 Pending changes in the mainline
 ===============================
 
+
+Version 0.8.0 (2014/07/10)
+==========================
+
 Major changes
 -------------
 
